[panel] Correctly set struts when two panels are right-oriented

http://bugzilla.gnome.org/show_bug.cgi?id=507873